# file-transfer-api

./: README.md  example_usage.py  main.py  pyproject.toml
.github/workflows/: ci.yml  lint.yml  test.yml
abstracts/: database_manager_abstract.py  exceptions_abstract.py  file_manager_abstract.py  response_abstract.py
api/: api.py  fastapi_router.py
api/routers/: fastapi_router.py
api/utils/: api_utils.py
app/: main.py
app/abstracts/: database_manager_abstract.py
app/exceptions/: custom_exceptions.py
app/models/: file_model.py
app/routers/: fastapi_file_router.py  fastapi_router.py
app/schemas/: responses.py
app/services/: local_database_manager.py  local_file_manager.py
app/utils/: logging_utils.py
application_frontend/: pyproject.toml
client/: client.py  fastapi_client.py
cloudformation_architecture/: README.md  pyproject.toml
database_manager/: abstract_database_manager.py  local_database_manager.py
docs/: api.routers.rst  api.rst  api.utils.rst  conf.py  database_manager.database_connection.rst  database_manager.rst  database_manager.schemas.rst  database_manager.utils.rst  exceptions.rst  file_manager.rst  modules.rst  schemas.rst  tests.rst  tests.test_api.rst  tests.test_client.rst  tests.test_database_manager.rst  tests.test_file_manager.rst  tests.test_fixtures.rst
exceptions/: custom_exception.py  custom_exceptions.py  database.py  database_exceptions.py  file.py  file_exceptions.py
file_manager/: abstract_file_manager.py  local_file_manager.py
file_transfer_api/: README.md  example_usage.py  pyproject.toml
file_transfer_api/docs/: conf.py  index.rst
file_transfer_api/scripts/: launch_app.py  setup_local_db.py
file_transfer_api/src/api/: api.py
file_transfer_api/src/api/routers/: fastapi_router.py
file_transfer_api/src/api/utils/: api_utils.py
file_transfer_api/src/client/: client.py
file_transfer_api/src/database_manager/: abstract_database_manager.py  aws_database_manager.py  local_database_manager.py
file_transfer_api/src/database_manager/database_connection/: aws_database.py  local_database.py
file_transfer_api/src/database_manager/schemas/: content_enum.py  database_entry.py  dynamodb_entry.py
file_transfer_api/src/database_manager/utils/: aws_database_utils.py  database_utils.py  setup_local_db.py
file_transfer_api/src/exceptions/: custom_exception.py  database_exceptions.py  file_exceptions.py
file_transfer_api/src/file_manager/: abstract_file_manager.py  aws_file_manager.py  local_file_manager.py
file_transfer_api/src/file_manager/schemas/: s3_uri.py
file_transfer_api/src/file_manager/utils/: url_utils.py
file_transfer_api/src/utils/: logging_utils.py
file_transfer_api/tests/: conftest.py
file_transfer_api/tests/test_api/: test_api.py
file_transfer_api/tests/test_client/: test_client.py
file_transfer_api/tests/test_database_manager/: test_local_database_manager.py
file_transfer_api/tests/test_file_manager/: test_local_file_manager.py
models/: database.py  file_model.py
routers/: fastapi_database_router.py  fastapi_file_router.py  fastapi_router.py
schemas/: custom_responses.py  file_metadata.py  responses.py
scripts/: launch.sh  setup_local_database.sh
services/: file_manager.py  local_database_manager.py  local_file_manager.py
tests/: conftest.py
utils/: logging_utils.py  utils.py
zz_archive/: .env.example
(+36 files in other folders)
