[tool.poetry]
name = "photos-api"
version = "0.1.0"
description = "A Fast API based API"
authors = ["Ugo Okoroafor <39538470+Uokoroafor@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.105.0"
uvicorn = "^0.25.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
