[tool.poetry]
name = "application-frontend"
version = "0.1.0"
description = "A react-based application front-end"
authors = ["Ugo Okoroafor <39538470+Uokoroafor@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
