[tool.poetry]
name = "cloudformation-architecture"
version = "0.1.0"
description = "Cloudformation backend for hosting and running services on AWS"
authors = ["Ugo Okoroafor <39538470+Uokoroafor@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
